--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "jest": "29.4.3",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "13.0.0",
-    "maplibre-gl": "^2.1.9",
+    "mapbox-gl": "^3.4.0",
+    "maplibre-gl": "4.3.2",
     "prettier": "2.8.4",
     "simplify-js": "1.2.4",
     "ts-jest": "29.0.5",
@@ -67,6 +68,7 @@
     "@turf/helpers": "^6.5.0",
     "@turf/length": "^6.5.0",
     "@types/leaflet": "^1.9.0",
+    "@types/mapbox-gl": "^3.1.0",
     "core-js": "^3.6.5",
     "deep-equal": "^2.2.0",
     "idb": "^7.1.1",
